# cliptube-ai

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  cliptube.db
.github/workflows/: ci.yml  pages.yml  release.yml
assets/: icon.icns
docs/: index.html  robots.txt  script.js  sitemap.xml  styles.css
docs/app/: app.css  app.js  index.html  manifest.webmanifest  sw.js
docs/assets/screenshots/: README.md
packaging/: install-desktop.sh  io.github.cliptubeai.ClipTubeAI.desktop
packaging/macos/: create-app-bundle.sh  create-dmg.sh
packaging/windows/: package.ps1
scripts/: run-ui-lang.sh  web_runtime_server.js
src/: ai.rs  app.rs  config.rs  db.rs  history.rs  main.rs  proxy.rs  share_link.rs  share_text.rs  transcript.rs  transcript_helpers.rs
src/ai/: prompts.rs  text.rs
src/app/: actions.rs  assets.rs  render.rs  render_chat.rs  render_main.rs  render_topbar.rs  use_cases.rs  view_model.rs
src/ui/: components.rs  i18n.rs  mod.rs  theme.rs
templates/: error.html  index.html  result.html
